RESOLVED FIXED125483
[Mac] Stop not caching HTTP resources with "Vary" header in response.
https://bugs.webkit.org/show_bug.cgi?id=125483
Summary [Mac] Stop not caching HTTP resources with "Vary" header in response.
Andreas Kling
Reported 2013-12-09 21:40:53 PST
A workaround was added in <http://trac.webkit.org/r120339>, preventing resources with the "Vary" header from being cached. This was a hack around missing CFNetwork support for Vary headers. Now that CFNetwork supports this, we should remove the workaround.
Attachments
Patch (4.18 KB, patch)
2013-12-09 21:56 PST, Andreas Kling
ap: review-
Patch (2.86 KB, patch)
2013-12-09 23:02 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2013-12-09 21:53:43 PST
Andreas Kling
Comment 2 2013-12-09 21:56:18 PST
Brady Eidson
Comment 3 2013-12-09 22:04:18 PST
This patch removes the workaround on all CFNetwork platforms. Does CFNetwork now support this on all WebKit-supported platforms? (I don't know the answer)
Alexey Proskuryakov
Comment 4 2013-12-09 22:18:27 PST
Comment on attachment 218832 [details] Patch > Does CFNetwork now support this on all WebKit-supported platforms? No.
Antti Koivisto
Comment 5 2013-12-09 22:45:45 PST
(In reply to comment #4) > (From update of attachment 218832 [details]) > > Does CFNetwork now support this on all WebKit-supported platforms? > > No. That's not helpful. Please explain what changes are needed.
Andreas Kling
Comment 6 2013-12-09 23:02:42 PST
Created attachment 218837 [details] Patch Keep the workaround on PLATFORM(WIN) for now.
Alexey Proskuryakov
Comment 7 2013-12-09 23:12:31 PST
> That's not helpful. The rest is in Radar, and Andreas saw it.
WebKit Commit Bot
Comment 8 2013-12-12 11:19:52 PST
Comment on attachment 218837 [details] Patch Clearing flags on attachment: 218837 Committed r160498: <http://trac.webkit.org/changeset/160498>
WebKit Commit Bot
Comment 9 2013-12-12 11:19:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.