[Mac] Stop not caching HTTP resources with "Vary" header in response. <https://webkit.org/b/125483> <rdar://problem/11781097>

Remove the workaround preventing resources with the "Vary" header
from going into cache, as the CFNetwork cache has supported this
for quite a while now.

31.5 MB progression on Membuster3, because we can now mmap those
resources from disk once they are in the cache.

We keep the workaround on PLATFORM(WIN) for now.

Reviewed by Antti Koivisto.


Canonical link: https://commits.webkit.org/143678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160498 268f45cc-cd09-0410-ab3c-d52691b4dbfc